# sunrise-sunset-ical

./: README.md  generate.py  pyproject.toml  requirements.txt  sunrise_sunset_munich_2026.ics
